examples/type_system/failing/90_adt_module_constructor_alias_not_exported.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E084: module ADT constructors are internal API even via alias import.
import TypeSystem.GenericResultTree as G

fn main() {
    let _x = G.Node(G.demo_tree(), G.demo_tree())
}
